[package]
name = "softmax"
version = "0.1.0"
edition = "2021"
authors = [
    "James Zow <jameszow@163.com>",
    "WanSen AI <team@wansenai.com>"
]
license = "MIT or Apache-2.0"
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
